
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int EXIT_FAILURE ;
 int errno ;
 int exit (int ) ;
 int fprintf (int ,char*,char*) ;
 int recv (int,char*,int,int ) ;
 int stderr ;
 char* strerror (int ) ;

__attribute__((used)) static int
sock_recv (int fd, char *dst, int len)
{
  int n;
  if ((n = recv (fd, dst, len, 0)) < 0)
    {
      fprintf (stderr, "sock_recv: recv() - %s\n", strerror (errno));
      exit (EXIT_FAILURE);
    }

  return (n);
}
